--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,10 @@
 <package format="2">
-  <name>rpr_arm</name>
+  <name>rrr_arm</name>
   <version>1.0.0</version>
   <description>
-    <p>URDF Description package for rpr_arm</p>
+    <p>URDF Description package for rrr_arm</p>
     <p>This package contains configuration data, 3D models and launch files
-for rpr_arm robot</p>
+for rrr_arm robot</p>
   </description>
   <author>TODO</author>
   <maintainer email="TODO@email.com" />
